--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,10 +9,39 @@
   <% include ../partials/nav.ejs %>
 
 
-<div class="container">
-  Deniz Home
-</div>
+    <div class="container">
 
+      <div class="row">
+        <div class="col-sm-4">
+          Temperature
+        </div>
+        <div class="col-sm-4">
+          Pressure
+        </div>
+        <div class="col-sm-4">
+          Humidity
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-4">
+          Magnetism
+        </div>
+        <div class="col-sm-4">
+          Accelerometer
+        </div>
+        <div class="col-sm-4">
+          Gyroscope
+        </div>
+      </div>
+
+    </div>
+
+  <% include ../partials/header.ejs %>
+
+  <script type="text/javascript">
+
+  </script>
 
 </body>
 </html>
