--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,47 +1,106 @@
+
 <!DOCTYPE html>
-<html>
-<head>
-  <% include ../partials/header.ejs %>
-</head>
+<html lang="en">
+  <head>
+    <% include ../partials/header.ejs %>
+  </head>
 
-<body>
+  <body>
 
-  <% include ../partials/nav.ejs %>
-
+    <% include ../partials/nav.ejs %>
 
     <div class="container">
+      <div class="page-header m-t-1">
+        <h1>Deniz Home</h1>
+      </div>
+      <p class="lead">Data received from a Raspberry Pi Zero + SenseHAT</p>
 
       <div class="row">
-        <div class="col-sm-4">
-          Temperature
-        </div>
-        <div class="col-sm-4">
-          Pressure
-        </div>
-        <div class="col-sm-4">
-          Humidity
+        <div class="col-md-12">
+          <h2>Teperature</h2>
+          <div id="temperature" style="width: 100%; height: 100%;"></div>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-sm-4">
-          Magnetism
+        <div class="col-md-12">
+          <h2>Pressure</h2>
+          <div id="pressure"></div>
         </div>
-        <div class="col-sm-4">
-          Accelerometer
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Humidity</h2>
         </div>
-        <div class="col-sm-4">
-          Gyroscope
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Magnetism</h2>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Accelerometer</h2>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Gyroscope</h2>
         </div>
       </div>
 
     </div>
 
-  <% include ../partials/header.ejs %>
+    <% include ../partials/footer.ejs %>
 
-  <script type="text/javascript">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.1.1/js/tether.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
 
-  </script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
-</body>
+    <script type="text/javascript">
+      google.charts.load('current', {packages: ['corechart', 'line']});
+      google.charts.setOnLoadCallback(drawBackgroundColor);
+
+      function drawBackgroundColor() {
+        var data = new google.visualization.DataTable();
+        data.addColumn('number', 'X');
+        data.addColumn('number', 'Temp.');
+
+        data.addRows([
+          [0, 0],   [1, 10],  [2, 23],  [3, 17],  [4, 18],  [5, 9],
+          [6, 11],  [7, 27],  [8, 33],  [9, 40],  [10, 32], [11, 35],
+          [12, 30], [13, 40], [14, 42], [15, 47], [16, 44], [17, 48],
+          [18, 52], [19, 54], [20, 42], [21, 55], [22, 56], [23, 57],
+          [24, 60], [25, 50], [26, 52], [27, 51], [28, 49], [29, 53],
+          [30, 55], [31, 60], [32, 61], [33, 59], [34, 62], [35, 65],
+          [36, 62], [37, 58], [38, 55], [39, 61], [40, 64], [41, 65],
+          [42, 63], [43, 66], [44, 67], [45, 69], [46, 69], [47, 70],
+          [48, 72], [49, 68], [50, 66], [51, 65], [52, 67], [53, 70],
+          [54, 71], [55, 72], [56, 73], [57, 75], [58, 70], [59, 68],
+          [60, 64], [61, 60], [62, 65], [63, 67], [64, 68], [65, 69],
+          [66, 70], [67, 72], [68, 75], [69, 80]
+        ]);
+
+        var options = {
+          hAxis: {
+            title: 'Time'
+          },
+          vAxis: {
+            title: 'Temperature (°C)'
+          },
+          backgroundColor: '#fff'
+        };
+
+        var chart = new google.visualization.LineChart(document.getElementById('temperature'));
+        chart.draw(data, options);
+      }
+    </script>
+
+  </body>
 </html>
