--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,12 +1,24 @@
-<nav class="navbar navbar-default navbar-static-top navbar-inverse">
-  <div class="container">
-    <ul class="nav navbar-nav">
-      <li class="active">
-        <a href="/"><span class="glyphicon glyphicon-home"></span> Home</a>
-      </li>
-      <li>
-        <a href="#"><span class="glyphicon glyphicon-user"></span> How this works</a>
-      </li>
-    </ul>
+<!-- Fixed navbar -->
+<div class="pos-f-t">
+  <div class="collapse" id="navbar-header">
+    <div class="container bg-inverse p-a-1">
+      <h3>Collapsed content</h3>
+      <p>Toggleable via the navbar brand.</p>
+    </div>
   </div>
-</nav>
+  <nav class="navbar navbar-light navbar-static-top bg-faded">
+    <div class="container">
+      <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
+        &#9776;
+      </button>
+      <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
+        <a class="navbar-brand" href="#">Home</a>
+        <ul class="nav navbar-nav">
+          <li class="nav-item">  <!-- class="active" -->
+            <a class="nav-link" href="#">How this works</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</div>
