--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,39 +17,57 @@
 
       <div class="row">
         <div class="col-md-12">
-          <h2>Teperature</h2>
+          <h2>Teperature
+            <span class="label label-primary">22°C</span>
+            <small class="text-muted"><em>Updated 13 Feb 17:30</em></small>
+          </h2>
           <div id="temperature" style="width: 100%; height: 100%;"></div>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-12">
-          <h2>Pressure</h2>
+          <h2>Pressure
+            <span class="label label-success">◕‿↼</span>
+            <small class="text-muted"><em>Updated 13 Feb 17:30</em></small>
+          </h2>
           <div id="pressure"></div>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-12">
-          <h2>Humidity</h2>
+          <h2>Humidity
+            <span class="label label-danger">(ʘ‿ʘ)</span>
+            <small class="text-muted"><em>Updated 13 Feb 17:30</em></small>
+          </h2>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-12">
-          <h2>Magnetism</h2>
+          <h2>Magnetism
+            <span class="label label-info">(ಥ﹏ಥ)</span>
+            <small class="text-muted"><em>Updated 13 Feb 17:30</em></small>
+          </h2>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-12">
-          <h2>Accelerometer</h2>
+          <h2>Accelorometer
+            <span class="label label-default">(╯°□°）╯</span>
+            <small class="text-muted"><em>Updated 13 Feb 17:30</em></small>
+          </h2>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-12">
-          <h2>Gyroscope</h2>
+          <h2>Gyroscope
+            <span class="label label-warning">¯\_(ツ)_/¯</span>
+            <small class="text-muted"><em>Updated 13 Feb 17:30</em></small>
+          </h2>
         </div>
       </div>
 
