--- a/views/pages/db.ejs
+++ b/views/pages/db.ejs
@@ -9,13 +9,31 @@
 <% include ../partials/nav.ejs %>
 
 <div class="container">
-<h2>Database Results</h2>
 
-<ul>
-    <% results.forEach(function(r) { %>
-        <li><%= r.id %> - <%= r.name %></li>
-    <% }); %>
-</ul>
+  <h2>Readings</h2>
+
+  <div class="table-responsive">
+    <table class="table table-sm table-hover">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Type</th>
+          <th>Value</th>
+          <th>Created At</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% results.forEach(function(r) { %>
+            <tr>
+              <td><%= r.id %></td>
+              <td><%= r.type %></td>
+              <td><%= r.value %></td>
+              <td><%= r.created_at %></td>
+            </tr>
+        <% }); %>
+      </tbody>
+    </table>
+  </div>
 
 </div>
 
