Hide 3 less important measurings for now

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -44,7 +44,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-md-12">
           <h2>Magnetism
             <span class="label label-info">(ಥ﹏ಥ)</span>
@@ -69,7 +69,7 @@
             <small class="text-muted"><em>Updated 13 Feb 17:30</em></small>
           </h2>
         </div>
-      </div>
+      </div> -->
 
     </div>
 
