--- a/views/pages/db.ejs
+++ b/views/pages/db.ejs
@@ -17,8 +17,9 @@
       <thead>
         <tr>
           <th>ID</th>
-          <th>Type</th>
-          <th>Value</th>
+          <th>Temperature</th>
+          <th>Pressure</th>
+          <th>Humidity</th>
           <th>Created At</th>
         </tr>
       </thead>
@@ -26,8 +27,9 @@
         <% results.forEach(function(r) { %>
             <tr>
               <td><%= r.id %></td>
-              <td><%= r.type %></td>
-              <td><%= r.value %></td>
+              <td><%= r.temperature %></td>
+              <td><%= r.pressure %></td>
+              <td><%= r.humidity %></td>
               <td><%= r.created_at %></td>
             </tr>
         <% }); %>
