big update: rendering temperature, pressure and humidity

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,6 +3,12 @@
 <html lang="en">
   <head>
     <% include ../partials/header.ejs %>
+    <style>
+      .chart {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
   </head>
 
   <body>
@@ -18,28 +24,29 @@
       <div class="row">
         <div class="col-md-12">
           <h2>Teperature
-            <span class="label label-primary">22°C</span>
-            <small class="text-muted"><em>Updated 13 Feb 17:30</em></small>
+            <span class="label label-primary"><%= locals.readings.temperature[locals.readings.temperature.length-1][1] %>°C</span>
+            <small class="text-muted"></small>
           </h2>
-          <div id="temperature" style="width: 100%; height: 100%;"></div>
+          <div id="temperature" class="chart"></div>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-12">
           <h2>Pressure
-            <span class="label label-success">◕‿↼</span>
-            <small class="text-muted"><em>Updated 13 Feb 17:30</em></small>
+            <span class="label label-success"><%= locals.readings.pressure[locals.readings.pressure.length-1][1] %> milibars</span>
+            <small class="text-muted"></small>
           </h2>
-          <div id="pressure"></div>
+          <div id="pressure" class="chart"></div>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-12">
           <h2>Humidity
-            <span class="label label-danger">(ʘ‿ʘ)</span>
-            <small class="text-muted"><em>Updated 13 Feb 17:30</em></small>
+            <span class="label label-danger"><%= locals.readings.humidity[locals.readings.humidity.length-1][1] %>%</span>
+            <small class="text-muted"></small>
+            <div id="humidity" class="chart"></div>
           </h2>
         </div>
       </div>
@@ -48,7 +55,7 @@
         <div class="col-md-12">
           <h2>Magnetism
             <span class="label label-info">(ಥ﹏ಥ)</span>
-            <small class="text-muted"><em>Updated 13 Feb 17:30</em></small>
+            <small class="text-muted"></small>
           </h2>
         </div>
       </div>
@@ -57,7 +64,7 @@
         <div class="col-md-12">
           <h2>Accelorometer
             <span class="label label-default">(╯°□°）╯</span>
-            <small class="text-muted"><em>Updated 13 Feb 17:30</em></small>
+            <small class="text-muted"></small>
           </h2>
         </div>
       </div>
@@ -66,7 +73,7 @@
         <div class="col-md-12">
           <h2>Gyroscope
             <span class="label label-warning">¯\_(ツ)_/¯</span>
-            <small class="text-muted"><em>Updated 13 Feb 17:30</em></small>
+            <small class="text-muted"></small>
           </h2>
         </div>
       </div> -->
@@ -82,40 +89,51 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
     <script type="text/javascript">
+      var readings = <%- JSON.stringify(locals.readings || []) %>;
+      console.log(readings)
+
       google.charts.load('current', {packages: ['corechart', 'line']});
-      google.charts.setOnLoadCallback(drawBackgroundColor);
+      google.charts.setOnLoadCallback(drawCharts);
 
-      function drawBackgroundColor() {
+      function drawCharts() {
+        drawChart({
+          rows: readings.temperature,
+          vTitle: 'Temperature (°C)',
+          line: 'Temp.',
+          domId: 'temperature'
+        })
+        drawChart({
+          rows: readings.pressure,
+          vTitle: 'Pressure (milibars)',
+          line: 'Pres.',
+          domId: 'pressure'
+        })
+        drawChart({
+          rows: readings.humidity,
+          vTitle: 'Humidity (%)',
+          line: 'Hum.',
+          domId: 'humidity'
+        })
+      }
+
+      function drawChart(opts) {
         var data = new google.visualization.DataTable();
-        data.addColumn('number', 'X');
-        data.addColumn('number', 'Temp.');
+        data.addColumn('string', 'X');
+        data.addColumn('number', opts.line);
 
-        data.addRows([
-          [0, 0],   [1, 10],  [2, 23],  [3, 17],  [4, 18],  [5, 9],
-          [6, 11],  [7, 27],  [8, 33],  [9, 40],  [10, 32], [11, 35],
-          [12, 30], [13, 40], [14, 42], [15, 47], [16, 44], [17, 48],
-          [18, 52], [19, 54], [20, 42], [21, 55], [22, 56], [23, 57],
-          [24, 60], [25, 50], [26, 52], [27, 51], [28, 49], [29, 53],
-          [30, 55], [31, 60], [32, 61], [33, 59], [34, 62], [35, 65],
-          [36, 62], [37, 58], [38, 55], [39, 61], [40, 64], [41, 65],
-          [42, 63], [43, 66], [44, 67], [45, 69], [46, 69], [47, 70],
-          [48, 72], [49, 68], [50, 66], [51, 65], [52, 67], [53, 70],
-          [54, 71], [55, 72], [56, 73], [57, 75], [58, 70], [59, 68],
-          [60, 64], [61, 60], [62, 65], [63, 67], [64, 68], [65, 69],
-          [66, 70], [67, 72], [68, 75], [69, 80]
-        ]);
+        data.addRows(opts.rows);
 
         var options = {
           hAxis: {
             title: 'Time'
           },
           vAxis: {
-            title: 'Temperature (°C)'
+            title: opts.vTitle
           },
           backgroundColor: '#fff'
         };
 
-        var chart = new google.visualization.LineChart(document.getElementById('temperature'));
+        var chart = new google.visualization.LineChart(document.getElementById(opts.domId));
         chart.draw(data, options);
       }
     </script>
