--- a/views/pages/db.ejs
+++ b/views/pages/db.ejs
@@ -24,7 +24,7 @@
         </tr>
       </thead>
       <tbody>
-        <% results.forEach(function(r) { %>
+        <% readings.forEach(function(r) { %>
             <tr>
               <td><%= r.id %></td>
               <td><%= r.temperature %></td>
