--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -40,3 +40,11 @@ small {
   font-size: small;
   vertical-align: middle;
 }
+
+/* CSS specific to this project
+-------------------------------------------------- */
+
+.chart {
+  width: 100%;
+  height: 100%;
+}
